tree-sitter-bet/test/corpus/03-component.txt
=================
empty component declaration
=================
MyEmptyComponent : : component{};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component)))

=================
component with variables and elements
=================
MyComplexComponent : : component{
  title_text: string = "Hello";
  (Header)
  (Text [content=title_text])
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (var_declaration
        name: (identifier)
        type: (type_identifier)
        value: (string))
      (component_element
        tag: (identifier))
      (component_element
        tag: (identifier)
        (properties
          (property
            name: (identifier)
            value: (expression
              (identifier))))))))

=================
component with multiple variables and elements
=================
MyComplexComponent : : component{
  title_text: string = "Hello";
  show_header: bool = true;
  (Header)
  (Text [content=title_text])
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (var_declaration
        name: (identifier)
        type: (type_identifier)
        value: (string))
      (var_declaration
        name: (identifier)
        type: (type_identifier)
        value: (bool))
      (component_element
        tag: (identifier))
      (component_element
        tag: (identifier)
        (properties
          (property
            name: (identifier)
            value: (expression
              (identifier))))))))

=================
component with immutable and mutable property and elements
=================
MyComplexComponent : : component{
  title_text: string = "Hello";
  show_header: bool: true;
  (Header)
  (Text [content=title_text])
};
---

(source_file
  (const_declaration
    (identifier)
    (component
      (var_declaration
        (identifier)
        (type_identifier)
        (string))
      (const_declaration
        (identifier)
        (type_identifier)
        (bool))
      (component_element
        (identifier))
      (component_element
        (identifier)
        (properties
          (property
            (identifier)
            (expression
              (identifier))))))))
