tree-sitter-bet/test/corpus/04-element.txt
=================
component with string element
=================
my_comp : : component {
  "hello world"
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (string_element
        (string)))))

=================
component with simple component element
=================
my_comp : : component {
  (MyComponent)
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (component_element
        tag: (identifier)))))

=================
component with component element with nameless properties
=================
my_comp : : component {
  (MyComponent [prop1, prop2="two"])
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (component_element
        tag: (identifier)
        (properties
          (property
            name: (identifier))
          (property
            name: (identifier)
            value: (expression
              (string))))))))

=================
component with if element
=================
my_comp : : component {
  (if show_it (MyComponent) "Not shown")
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (if_element
        cond: (identifier)
        then: (component_element
          tag: (identifier))
        else: (string_element
          (string))))))

=================
component with cond element
=================
my_comp : : component {
  (cond state
    "loading" (Spinner)
    "loaded" (Content))
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (cond_element
        selector: (identifier)
        (case_list
          (case
            match: (string)
            branch: (component_element
              tag: (identifier)))
          (case
            match: (string)
            branch: (component_element
              tag: (identifier))))))))

=================
component with multiple elements
=================
my_comp : : component {
  "A title"
  (Divider)
  (Content)
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (string_element
        (string))
      (component_element
        tag: (identifier))
      (component_element
        tag: (identifier)))))

=================
component with valueless attribute
=================
my_comp : : component {
  (MyComponent {disabled})
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (component_element
        tag: (identifier)
        (attributes
          (attribute
            name: (identifier)))))))

=================
component with attribute and value
=================
my_comp : : component {
  (MyComponent {class: "my-class"})
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (component_element
        tag: (identifier)
        (attributes
          (attribute
            name: (identifier)
            name: (string)))))))

=================
component with properties and attributes
=================
my_comp : : component {
  (MyComponent [ prop1=1
               , prop2="2"
               ]
               { class="my-class"
               , disabled
               , id=my_id
               })
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (component
      (component_element
        tag: (identifier)
        (properties
          (property
            name: (identifier)
            value: (expression
              (number)))
          (property
            name: (identifier)
            value: (expression
              (string))))
        (attributes
          (attribute
            name: (identifier)
            value: (attribue_value
              (string)))
          (attribute
            name: (identifier))
          (attribute
            name: (identifier)
            value: (attribue_value
              (identifier))))))))
