tree-sitter-bet/test/corpus/05-style.txt
=================
style declaration
=================
my_style : : style{};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style)))

=================
style property declaration
=================
my_style : : style{
  --bar: "bar";
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string))))))))

=================
style property declaration - terminator
=================
my_style : : style{
  --bar: "bar";
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string))))))))

=================
style with multiple property declarations
=================
my_style : : style{
  --bar: "bar";
  foo: "foo";
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string)))))
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string))))))))

=================
style comment
=================
my_style :: style {
  /* comment */
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (comment_block))))

=================
style comment before declaration
=================
my_style :: style {
  /* comment */
  foo: "bar";
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (comment_block)
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string))))))))

=================
style comment after declaration
=================
my_style :: style {
  foo: "bar";
  /* comment */
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string)))))
      (comment_block))))

=================
style comment between declarations
=================
my_style :: style {
  --bar: "bar";
  /* comment */
  foo: "bar";
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string)))))
      (comment_block)
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (string))))))))

=================
style parameters
=================
my_style : : style(bg_color: Color, width: Size) {
  --bar: "bar";
  foo: "bar";
};
---

(source_file
  (const_declaration
    (identifier)
    (style
      (style_param
        (identifier)
        (identifier))
      (style_param
        (identifier)
        (identifier))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string)))))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string))))))))

=================
style parameter tag
=================
my_style : : style(
  bg_color: Color @var("--bg-color"),
  width:    Size  @var("--width", "--_width"),
) {
  --bar: "bar";
  foo: "bar";
};
---

(source_file
  (const_declaration
    (identifier)
    (style
      (style_param
        (identifier)
        (identifier)
        (style_param_tag
          (string)))
      (style_param
        (identifier)
        (identifier)
        (style_param_tag
          (string)
          (string)))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string)))))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string))))))))

=================
style parameter with value and tag
=================
my_style : : style(
  bg_color: Color = #ff00ff @var("--bg-color"),
  width:    Size  = 100px   @var("--width", "--_width"),
) {
  --bar: "bar";
  foo: "bar";
};
---

(source_file
  (const_declaration
    (identifier)
    (style
      (style_param
        (identifier)
        (identifier)
        (expression
          (color))
        (style_param_tag
          (string)))
      (style_param
        (identifier)
        (identifier)
        (expression
          (size))
        (style_param_tag
          (string)
          (string)))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string)))))
      (style_rule
        (css_property_declaration
          (identifier)
          (property_value
            (css_expression
              (string))))))))
