tree-sitter-bet/test/corpus/05-style_expression.txt
=================
style with simple property
=================
my_style : : style{
  display: block;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (identifier))))))))

=================
style with number value
=================
my_style : : style{
  z-index: 999;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (number))))))))

=================
style with size property
=================
my_style : : style{
  width: 100px;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_size))))))))

=================
style with percentage property
=================
my_style : : style{
  width: 50%;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_percentage))))))))

=================
style with hex color
=================
my_style : : style{
  color: #ff0000;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (color_hex))))))))

=================
style with function call
=================
my_style : : style{
  transform: translate(10px);
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_function_call
                (identifier)
                (css_expression
                  (css_size))))))))))

=================
style with url
=================
my_style : : style{
  background-image: url("http://example.com/bg.png");
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_function_call
                (identifier)
                (css_expression
                  (string))))))))))

=================
style with css variable
=================
my_style : : style{
  color: var(--primary-color);
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_function_call
                (identifier)
                (css_calc_expr
                  (css_unary_expr
                    (css_expression
                      (css_unary_expr
                        (css_expression
                          (identifier))))))))))))))

=================
style with unary expression
=================
my_style : : style{
  margin: -10px;
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_unary_expr
                (css_expression
                  (css_size))))))))))

=================
style with binary expression
=================
my_style : : style{
  width: calc(100% - 20px);
};
---

(source_file
  (const_declaration
    name: (identifier)
    value: (style
      (style_rule
        (css_property_declaration
          name: (identifier)
          value: (property_value
            (css_expression
              (css_function_call
                (identifier)
                (css_expression
                  (css_percentage))
                (css_calc_expr
                  (css_unary_expr
                    (css_expression
                      (css_size))))))))))))
