tree-sitter-bet/test/corpus/06-teminator.txt
====================
semicolon terminator
====================
foo : : component{};
---

(source_file
  (const_declaration
    (identifier)
    (component)))

====================
newline terminator
====================
foo : : component{}

---

(source_file
  (const_declaration
    (identifier)
    (component)))

====================
eof terminator
====================
foo : : component{}
---

(source_file
  (const_declaration
    (identifier)
    (component)))
