tree-sitter-bet/test/corpus/09-template_expression.txt
===================
attribute template expression
===================

borderColor :: "black"
(div {border="1px solid red"})
---

(source_file
  (const_declaration
    (identifier)
    (string))
  (component_element
    (identifier)
    (attributes
      (attribute
        (identifier)
        (attribue_value
          (string))))))
